--- a/index_en.html
+++ b/index_en.html
@@ -4,15 +4,15 @@
     <!-- Required meta tags -->
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=5.0">
-    <title>Swimming coach Prague, Brno, Ostrava, Krnov and Online | ES</title>
-    <meta content="Swimming training under the supervision of university educated professionals with several years of experience in the field - Prague, Brno, Ostrava, Krnov or Online"
+    <title>Swimming coach Prague, Brno, Ostrava, Olomouc, Krnov and Online | ES</title>
+    <meta content="Swimming training under the supervision of university educated professionals with several years of experience in the field - Prague, Brno, Ostrava, Olomouc, Krnov or Online"
           name="description">
 
     <meta property="og:locale" content="en_GB">
     <meta property="og:title"
-          content="Swimming coach Prague, Brno, Ostrava, Krnov and Online">
+          content="Swimming coach Prague, Brno, Ostrava, Olomouc, Krnov and Online">
     <meta property="og:description"
-          content="Swimming training under the supervision of university educated professionals with several years of experience in the field - Prague, Brno, Ostrava, Krnov or Online">
+          content="Swimming training under the supervision of university educated professionals with several years of experience in the field - Prague, Brno, Ostrava, Olomouc, Krnov or Online">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.elementswimming.cz/">
     <meta property="og:site_name" content="Element swimming">
@@ -24,7 +24,7 @@
     <meta name="twitter:site" content="@elementswimming">
     <meta name="twitter:title" content="Element swimming">
     <meta name="twitter:description"
-          content="Swimming training under the supervision of university educated professionals with several years of experience in the field - Prague, Brno, Ostrava, Krnov or Online">
+          content="Swimming training under the supervision of university educated professionals with several years of experience in the field - Prague, Brno, Ostrava, Olomouc, Krnov or Online">
     <meta name="twitter:image" content="https://www.elementswimming.cz/static/images/home_photo.webp">
 
     <link rel="icon" href="static/images/icons/logo_icon.png">
@@ -98,7 +98,7 @@
     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center">
         <div class="col-lg-5 p-3 p-lg-5 pt-lg-3 justify-content-center">
             <p class="pre-title fw-bold">In the pool? Only with us!</p>
-            <h1 class="pre-title fw-bold" style="display:none">Swimming coach Prague, Brno, Ostrava, Krnov and Online</h1>
+            <h1 class="pre-title fw-bold" style="display:none">Swimming coach Prague, Brno, Ostrava, Olomouc, Krnov and Online</h1>
             <p class="display-4 fw-bold lh-1 py-3">Swimming training of the 21st century</p>
             <p class="lead">A modern concept of the training process, based on current trends and supervised by university-educated professionals in the field</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3 pt-5 justify-content-center buttons">
@@ -202,7 +202,7 @@
             <br><br>
             Our trainers are top in their field due to their dedication and qualifications.
             With us, it's not just about training, it's also about passing on knowledge to our clients.
-            We are proud to be able to offer our swimming services not only in <span class="fw-bold">Prague, Brno, Ostrava</span> and
+            We are proud to be able to offer our swimming services not only in <span class="fw-bold">Prague, Brno, Ostrava, Olomouc</span> and
             <span class="fw-bold">Krnov</span>, but also through <span class="fw-bold">Online coaching</span>
             to make us as accessible as possible to you.
             <br><br>
@@ -241,7 +241,7 @@
         </div>
 
         <div class="col">
-            <button id="ostrava" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OstravaModal">
+            <button id="ostrava" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OtherCitiesModal">
                 <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/services/ostrava.webp');">
                     <div class="d-flex flex-column h-100 p-5 mt-5 pb-3 text-shadow-1">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start">Ostrava</h2>
@@ -255,7 +255,21 @@
         </div>
 
         <div class="col">
-            <button id="krnov" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#KrnovModal">
+            <button id="olomouc" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OtherCitiesModal">
+                <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/services/olomouc.webp');">
+                    <div class="d-flex flex-column h-100 p-5 mt-5 pb-3 text-shadow-1">
+                        <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start">Olomouc</h2>
+                        <ul class="d-flex list-unstyled mt-auto">
+                            <li class="me-auto">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </button>
+        </div>
+
+        <div class="col">
+            <button id="krnov" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OtherCitiesModal">
                 <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/services/krnov.webp');">
                     <div class="d-flex flex-column h-100 p-5 mt-5 pb-3 text-shadow-1">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start">Krnov</h2>
@@ -797,139 +811,7 @@ If the cancellation of the training on a given day is on our side, the client ha
     </div>
 </div>
 
-<div class="modal fade" id="OstravaModal" tabindex="-1" aria-labelledby="OstravaModal" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-centered">
-        <div class="modal-content px-2">
-            <div class="modal-header text-center">
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <div class="row row-cols-1 align-items-stretch pb-3">
-                    <div class="col">
-                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
-                            <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
-                                <div class="d-flex justify-content-between flex-wrap align-items-center">
-                                    <p class="mb-3 display-6 lh-1 fw-bold pr-2">Individual lessons</p>
-                                    <p class="mb-3 display-cust lh-1 fw-bold">649 Kč/hour</p>
-                                </div>
-                                <ul class="d-flex list-unstyled mt-auto">
-                                    <li class="d-flex align-items-center me-3">
-                                        <small>
-                                            Are you tired of "circling the wall"? We offer you meaningful
-                                            training so that you're under the watchful eye of a professional
-                                            and know you're in a workout that's set up to lead to improvement in your goals.
-                                        </small>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
-                            <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
-                                <div class="d-flex justify-content-between flex-wrap align-items-center">
-                                    <p class="mb-4 display-6 lh-1 fw-bold">Lessons for pairs</p>
-                                    <p class="mb-4 display-cust lh-1 fw-bold">699 Kč/hour</p>
-                                </div>
-                                <ul class="d-flex list-unstyled mt-auto">
-                                    <li class="d-flex align-items-center me-3">
-                                        <small>
-                                            Don't you like to do sports alone? Do you prefer to go with your girlfriend,
-                                            colleague, brother, sister or grandmother? Then don't hesitate, take whoever
-                                            you normally go with and swim.
-                                        </small>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
-                            <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
-                                <div class="d-flex justify-content-between flex-wrap align-items-center">
-                                    <p class="mb-4 display-6 lh-1 fw-bold">Group lessons</p>
-                                    <p class="mb-4 display-cust lh-1 fw-bold">From 799 Kč/hour</p>
-                                </div>
-                                <ul class="d-flex list-unstyled mt-auto">
-                                    <li class="d-flex align-items-center me-3">
-                                        <small>
-                                            Lessons when those who fit together in terms of performance
-                                            or those who swim as a group come together.
-                                        </small>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
-                            <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
-                                <div class="d-flex justify-content-between flex-wrap align-items-center">
-                                    <p class="mb-3 display-6 lh-1 fw-bold pr-2">Lessons for nonswimmers</p>
-                                    <p class="mb-3 display-cust lh-1 fw-bold">799 Kč/hour</p>
-                                </div>
-                                <ul class="d-flex list-unstyled mt-auto">
-                                    <li class="d-flex align-items-center me-3">
-                                        <small>
-                                            If you plan to learn to swim at a later age, or want someone
-                                            who will be more dedicated to your kids than a coach who has
-                                            20 kids in a club, drop me a line.
-                                        </small>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card card-cover h-90 overflow-hidden text-white bg-green rounded-5 shadow-lg">
-                            <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
-                                <div class="d-flex justify-content-between flex-wrap align-items-center">
-                                    <p class="mb-4 display-6 lh-1 fw-bold">Analysis of the technique</p>
-                                    <p class="mb-4 display-cust lh-1 fw-bold">2499 Kč</p>
-                                </div>
-                                <ul class="d-flex list-unstyled mt-auto">
-                                    <li class="d-flex align-items-center me-3 text-justify long-text">
-                                        <small>
-                                            You've mastered the technique of YouTube videos but it's still not the same in the water?
-                                            Do you think you repeat the movements in the water as in the video but the expected
-                                            progress is nowhere? Well, here's something for you - Video analysis of the swimming
-                                            method with subsequent correction of the technique. Using this service, I will provide
-                                            you with a video recording of your swimming, which we will go through together both
-                                            theoretically and practically.
-                                        </small>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row row-cols-1 align-items-stretch pb-3 px-4 g-2">
-                <div class="d-flex gap-2 flex-column modal-title text-muted wh-100 px-3 small">
-                    <span>
-                        **Price list is valid from 01.02.2023
-                    </span>
-                    <span>
-                        **Rules for lessons of all kinds:
-                    </span>
-                    <ul>
-                        <li>
-                            A lesson can be cancelled up to 24 hours before the lesson.
-                        </li>
-                        <li>
-If the client cancels the training on the day of the training the client will pay a cancellation fee equal to the full price of the lesson
-                        </li>
-                        <li>
-If the cancellation of the training on a given day is on our side, the client has the next training free of charge.
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" id="KrnovModal" tabindex="-1" aria-labelledby="KrnovModal" aria-hidden="true">
+<div class="modal fade" id="OtherCitiesModal" tabindex="-1" aria-labelledby="OtherCitiesModal" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content px-2">
             <div class="modal-header text-center">
